removes bootstrap stuff and fix broken styles

--- a/scss/_component-embeddables-checkout.scss
+++ b/scss/_component-embeddables-checkout.scss
@@ -15,7 +15,7 @@
     ._embed-code-form {
       display: flex;
 
-      .form-group {
+      .sb-form-group {
         flex-basis: 30%;
         margin-right: $gutter;
 
